# tauri_lustre_app

./: .gitignore  README.md  gleam.toml  index.html  manifest.toml  package.json  pnpm-lock.yaml
priv/static/: index.html  tauri_lustre_app.min.mjs  tauri_lustre_app.mjs
src/: app.gleam  commands.gleam  ffi.gleam  lodash_ffi.mjs  notification_ffi.mjs  notifications.gleam  styles.gleam  tauri_ffi.mjs  tauri_lustre_app.gleam  types.gleam  ui.gleam  view.gleam
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: connection.rs  lazy_repo.rs  lib.rs  unit_of_work.rs
src-tauri/src/core/: error.rs
src-tauri/src/features/greet/: command.rs  handler.rs  mod.rs  model.rs  repo.rs
