[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.226", features = ["derive"] }
log = "0.4.28"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2.7.0"
tauri-plugin-notification = "2"
chrono = "0.4.42"
rusqlite = { version = "0.37.0", features = [
    "bundled",
    "load_extension",
    "backup",
] }
rusqlite_migration = "2.3.0"
r2d2 = "0.8"
r2d2_sqlite = "0.31.0"

